testsuite/escript/errors/errors005-const-same-name-as-function.err1
Expected identifier after const declaration
